correct no-video on mobile

--- a/src/scss/components/full-section.scss
+++ b/src/scss/components/full-section.scss
@@ -52,6 +52,7 @@
         @include media('<tablet') {
             font-size: 36px;
             margin-top: 70px;
+            display: block;
         }
     }
     .scroll-down{
@@ -119,6 +120,9 @@
         @include media('<desktop') {
             margin-bottom: -15px;
         }
+        @include media('<tablet') {
+            display: none;
+        }
         &.muted{
             @extend .icon-volume-off;
         }
@@ -133,6 +137,9 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        @include media('<tablet') {
+            display: none;
+        }
     }
 }
 .scroll-up{
